--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,22 @@
+* {
+    font-family: 'Verdana';
+}
+
 html {
     background-color: #ebebd3;
     color: #2f1000
 }
 
-img {
+header {
+    display: flex;
+    align-items: center;
+}
+
+header img {
     float: left;
-    width: 5%;
+    width: 50px;
+    margin-right: 10px;
+    border: 3px solid #2f1000;
 }
 
 nav {
@@ -24,12 +35,46 @@ nav a {
     flex-grow: 1;
     border: 2px solid #2f1000
 }
-nav a:hover {
+
+nav a.active {
     background-color: #57473c;
 }
 
 nav i {
     margin-right: 10px
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto 1fr;
+    gap: 1rem;
+    justify-items: center;
+    margin-top: 100px;
+    margin-right: 200px;
+    margin-bottom: 50px;
+    margin: 100px 50px 200px 50px;
+}
+
+main h2 {
+    grid-row: 1;
+    grid-column: 1;
+    text-align: center;
+}
+
+main p {
+    grid-row: 2;
+    grid-column: 1;
+    color: #fbfbf6;
+    background-color: #2e5339;
+    padding: 10px;
+}
+
+main img { 
+    grid-row: 1 / 4;
+    grid-column: 2;
+    width: 300px;
+    border: 5px solid #2e5339;
 }
 
 footer {
@@ -41,9 +86,13 @@ footer {
 footer div {
     display: flex;
     align-items: center;
+    font-size: large;
 }
 
 footer i {
     margin-right: 10px;
 }
   
+footer a {
+    color: #2f1000;
+}
