--- a/css/about_style.css
+++ b/css/about_style.css
@@ -46,41 +46,33 @@ nav i {
 
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto 1fr auto;
-    gap: 1rem;
-    justify-items: center;
-    margin: 50px 50px 200px 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 20px;
 }
 
 main h2 {
+    text-align: center;
+}
+
+div.Education {
     grid-row: 1;
     grid-column: 1;
-    text-align: center;
 }
 
-main p {
+div.Coursework {
     grid-row: 2;
     grid-column: 1;
-    color: #fbfbf6;
-    background-color: #2e5339;
-    padding: 10px;
-    width: 400px;
 }
 
-main video { 
-    grid-row: 1 / 4;
+div.Biography {
+    grid-row: 1;
     grid-column: 2;
-    width: 600px;
-    border: 5px solid #2e5339;
-    margin-left: 0px;
 }
 
-main h3 {
-    margin-top: 50px;
-    grid-row: 4;
-    grid-column: 1 / span 2;
-    text-align: center;
+div.Skills {
+    grid-row: 1 / span 2;
+    grid-column: 3;
 }
 
 footer {
