--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -44,6 +44,17 @@ nav i {
     margin-right: 10px
 }
   
+main {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact_info {
+    grid-column: 1;
+    grid-row: 1;
+}
+
 main div {
     display: flex;
     align-items: center;
@@ -59,3 +70,45 @@ main i {
 main a {
     color: #2f1000;
 }
+
+form {
+    grid-column: 2;
+    grid-row: 1;
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 75px;
+    color: #fbfbfb;
+    background-color: #2e5339;
+}
+  
+form h3 {
+    text-align: center;
+}
+
+label {
+    display: flex;
+    align-items: center;
+    width: 100px;
+    text-align: right;
+    margin-bottom: 5px;
+    margin-left: 10px;
+}
+  
+input, textarea {
+    width: 90%;
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    color: #fbfbfb;
+    background-color: #49845b;
+}
+
+textarea {
+    resize: none;
+    height: 40%;
+}
+  
+input[type="submit"] {
+    width: auto;
+}
+  
