--- a/css/work_style.css
+++ b/css/work_style.css
@@ -71,7 +71,7 @@ main p {
 main video { 
     grid-row: 1 / 4;
     grid-column: 2;
-    width: 600px;
+    height: 400px;
     border: 5px solid #2e5339;
     margin-left: 0px;
 }
