--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -12,11 +12,13 @@ header {
     align-items: center;
 }
 
+
 header img {
     float: left;
     width: 50px;
     margin-right: 10px;
     border: 3px solid #2f1000;
+    border-radius: 5px;
 }
 
 nav {
@@ -24,7 +26,9 @@ nav {
     overflow: hidden;
     display: flex;
     justify-content: space-between;
+    border-radius: 5px;
 }
+
 nav a {
     float: left;
     color: #fbfbf6;
@@ -33,11 +37,16 @@ nav a {
     text-decoration: none;
     font-size: 18px;
     flex-grow: 1;
-    border: 2px solid #2f1000
+    border: 2px solid #2f1000;
+    border-left: none;
 }
 
 nav a.active {
     background-color: #57473c;
+}
+
+nav a.first {
+    border-left: 2px solid #2f1000;
 }
 
 nav i {
@@ -79,6 +88,7 @@ form {
     margin-top: 75px;
     color: #fbfbfb;
     background-color: #2e5339;
+    border-radius: 5px;
 }
   
 form h3 {
@@ -101,6 +111,7 @@ input, textarea {
     margin-left: 10px;
     color: #fbfbfb;
     background-color: #49845b;
+    border-radius: 5px;
 }
 
 textarea {
