--- a/css/work_style.css
+++ b/css/work_style.css
@@ -12,11 +12,13 @@ header {
     align-items: center;
 }
 
+
 header img {
     float: left;
     width: 50px;
     margin-right: 10px;
     border: 3px solid #2f1000;
+    border-radius: 5px;
 }
 
 nav {
@@ -24,7 +26,9 @@ nav {
     overflow: hidden;
     display: flex;
     justify-content: space-between;
+    border-radius: 5px;
 }
+
 nav a {
     float: left;
     color: #fbfbf6;
@@ -33,11 +37,16 @@ nav a {
     text-decoration: none;
     font-size: 18px;
     flex-grow: 1;
-    border: 2px solid #2f1000
+    border: 2px solid #2f1000;
+    border-left: none;
 }
 
 nav a.active {
     background-color: #57473c;
+}
+
+nav a.first {
+    border-left: 2px solid #2f1000;
 }
 
 nav i {
@@ -50,7 +59,7 @@ main {
     grid-template-rows: auto auto 1fr auto;
     gap: 1rem;
     justify-items: center;
-    margin: 50px 50px 200px 50px;
+    margin: 50px 50px 120px 50px;
 }
 
 main h2 {
@@ -66,6 +75,7 @@ main p {
     background-color: #2e5339;
     padding: 10px;
     width: 400px;
+    border-radius: 5px;;
 }
 
 main video { 
@@ -74,6 +84,7 @@ main video {
     height: 400px;
     border: 5px solid #2e5339;
     margin-left: 0px;
+    border-radius: 5px;
 }
 
 main h3 {
@@ -93,7 +104,7 @@ footer div {
     display: flex;
     align-items: center;
     font-size: large;
-    clear: b
+    clear: both;
 }
 
 footer i {
